[package]
name = "photo_process"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
glob = "0.3"
gpx = "0.8.5"
walkdir = "2"
xml-rs = "0.8" # gpx depends on it, might need it for custom parsing if gpx crate falls short
regex = "1"
