[project]
name = "photo_process"
version = "0.0.1"
requires-python = ">=3.13"
license = "MIT"
description="simple scripts to process photos"
dependencies = [
    "sh",
    "click",
    "gpxpy",
    "maya",
    "photo_process",
]

[project.scripts]
photo_process = "photo_process:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[dependency-groups]
dev = [
    "black",
    "isort",
    "neovim",
    "flake8",
    "pylint",
    "mypy",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
photo_process = { path = ".", editable = true }
